Fix blog on mobile

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -11,6 +11,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
   -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
 }
 
 body {
